--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,19 @@
+:root{
+  min-width: 50vw;
+  max-width: 100vw;
+  min-height: 1vh;
+  max-height: 1vh
+}
+
 .mainDiv {
-  min-height: 100vh;
+  min-height: 50vh;
+  max-width: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: rgb(17, 10, 10);
+  margin: 0 auto 0 auto;
+  gap: 1rem;
 }
