--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,11 +1,12 @@
 .header{
   width: 100%;
-  height: 7rem;
-  padding: 2rem 0 1rem 3rem;
+  height: 6rem;
+  padding: 2rem 0 1rem 1.5rem;
   font-size: 4.5rem;
   overflow: hidden;
   background-color: powderblue;
   font-weight: 525;
   box-shadow: 3px 3px 5px 6px #ccc;
   align-content: center;
+  color: rgb(6, 6, 52);
 }
