--- a/src/components/DropDown/DropDown.css
+++ b/src/components/DropDown/DropDown.css
@@ -1,14 +1,14 @@
 select{
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   font-family: 'Courier New', Courier, monospace;
   font-weight: 550;
   padding: 0.5rem;
   letter-spacing: 0.2rem;
-  border-radius: 5%;
   border-color: rgb(6, 6, 52);
+  border-width: 2px;
   color: rgb(6, 6, 52);
-  background-color: powderblue;
-  width: 100%;
+  background-color: rgb(246, 249, 252);
+  width: 32rem;
 }
 
 .dropdown-wrapper{
@@ -20,4 +20,3 @@ select{
   cursor: pointer;
   border: solid rgb(6, 6, 52);
 }
-
