Added more colordivs and changed layout

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,15 @@
   gap: 1rem;
 }
 
+.div-wrapper{
+  width: 70%;
+  height: 100%;
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(3, 8rem);
+  grid-template-rows: auto;
+}
+
 #errorMessage{
   color: red;
   visibility: hidden;
