--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 :root{
-  min-width: w;
+  min-width: 70vw;
   max-width: 100vw;
   background-color: rgb(252, 252, 245);
 }
 
 .mainDiv {
-  min-height: 90vh;
+  min-height: 80vh;
   max-width: 100vw;
   display: flex;
   justify-content: center;
@@ -13,7 +13,6 @@
   align-items: center;
   font-size: calc(10px + 2vmin);
   color: rgb(6, 6, 52);
-  margin: 0 auto 0 auto;
   gap: 1rem;
 }
 
@@ -31,7 +30,12 @@
   grid-template-rows: auto;
 }
 
+p{
+  margin-block-start: 0.5em;
+  margin-block-end: 0.5em;
+}
+
 #errorMessage{
   color: red;
-  visibility: hidden;
+  display: none;
 }
