--- a/src/components/DropDown/DropDown.css
+++ b/src/components/DropDown/DropDown.css
@@ -8,7 +8,7 @@ select{
   border-width: 2px;
   color: rgb(6, 6, 52);
   background-color: rgb(246, 249, 252);
-  width: 32rem;
+  width: 90%;
 }
 
 .dropdown-wrapper{
