--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,6 @@
 .header{
-  width: 100%;
   height: 6rem;
-  padding: 2rem 0 1rem 1.5rem;
+  padding: 2rem 3rem 1rem 5rem;
   font-size: 4.5rem;
   overflow: hidden;
   background-color: powderblue;
@@ -9,6 +8,9 @@
   box-shadow: 3px 3px 5px 6px #ccc;
   align-content: center;
   color: rgb(6, 6, 52);
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
 }
 
 #image{
